--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/normalize.css" />
     <link rel="stylesheet" href="./src/style.css" />
-    <title>Mashenik Keyboard</title>
+    <title>Keyboard</title>
   </head>
   <body>
     <script src="./src/main.js"></script>
